[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/textures/battle/specter.png" type="Texture" id=1]
[ext_resource path="res://src/entities/enemies/Enemy.gd" type="Script" id=2]
[ext_resource path="res://src/effects/SpecterDeathEffect.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/entities/enemies/EnemyHurtBox.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5, 5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 7, 7 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 5, 5 )

[sub_resource type="Animation" id=3]
resource_name = "Attack"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 6, 7 ]
}

[sub_resource type="Animation" id=4]
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 1, 2, 3, 4 ]
}

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 2147483648
collision_mask = 2147483652
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}
death_effect = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -2.84217e-14, -4.76837e-07 )
texture = ExtResource( 1 )
hframes = 8
frame = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 2 )

[node name="HurtBox" parent="." instance=ExtResource( 4 )]

[node name="CollisionShape2D" parent="HurtBox" index="0"]
shape = SubResource( 5 )
disabled = true

[node name="Anim" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 3 )
anims/Move = SubResource( 4 )
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="animation_finished" from="Anim" to="." method="_on_Anim_animation_finished"]

[editable path="HurtBox"]
